deleted unused messages

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -126,7 +126,6 @@ batchedit.yourTags                 = Ihre Tags
 
 bibtex.abstract                              = Zusammenfassung
 bibtex.abstract.cap                          = Zusammenfassung
-bibtex.actions                               = 
 bibtex.actions.additionalFiles               = ein Dokument hinzuf\u00FCgen
 bibtex.actions.additional_url.add            = URL hinzuf\u00FCgen
 bibtex.actions.additional_url.add.title      = eine weitere zus\u00E4tzliche URL hinzuf\u00FCgen
@@ -300,8 +299,6 @@ captcha = Captcha
 
 change = &auml;ndern
 
-citation.style.plain = 
-
 close = schlie\u00DFen
 
 community = Community
@@ -335,7 +332,6 @@ cv.defaultlayout           = Beispiellayouts
 cv.description             = Sie k\u00F6nnen Ihren Lebenslauf (CV) in diesem Men\u00FC bearbeiten.
 cv.editCV                  = Lebenslauf bearbeiten
 cv.editSettings            = Pers\u00F6nliche Daten editieren
-cv.error.common            = 
 cv.error.common.noData     = Keine Daten f&uuml;r {0}.
 cv.error.common.notVisible = Das Tag {0} ist f&uuml;r sie leider nicht sichtbar.
 cv.error.common.stacktrace = {0} hat einen Fehler verursacht: {1} mit stacktrace {2}
@@ -353,8 +349,10 @@ cv.layout.name.clear       = Leer
 cv.layout.name.curr        = Jetziges
 cv.layout.name.def1en      = Vorlage 1 [Englisch]
 cv.layout.name.def1ger     = Vorlage 1 [Deutsch]
+cv.layout.name.def1ru      = \u043E\u0431\u0440\u0430\u0437\u0435\u0446 1 [\u0440\u0443\u0441\u0441\u043A\u0438\u0439]
 cv.layout.name.def2en      = Vorlage 2 [Englisch]
 cv.layout.name.def2ger     = Vorlage 2 [Deutsch]
+cv.layout.name.def2ru      = \u043E\u0431\u0440\u0430\u0437\u0435\u0446 2 [\u0440\u0443\u0441\u0441\u043A\u0438\u0439]
 cv.layout.table            = \ <!-- Dies ist unser Standardlayout, bei Bedarf k\u00F6nnen Sie es erweitern/ver\u00E4ndern -->\r\n\r\n{| class="wikitable" style="width:100%;"\r\n| ==Zu meiner Person==\r\n{| class="wikitable" style="float:left;min-width:15em;margin-left:2em;"\r\n| Name || <name />\r\n|-\r\n| Ort || <location />\r\n|-\r\n| Geburtstag || <birthday />\r\n|-\r\n| Beruf || <profession />\r\n|-\r\n| Institut || <institution />\r\n|}\r\n{| class="wikitable" style="float:right;margin-right:2em"\r\n| <image />\r\n|}\r\n|}\r\n\r\n{| class="wikitable" style="width:100%;"\r\n| ==Wissenschaftliche Interessen==\r\n|-\r\n| <interests />\r\n|}\r\n\r\n{| class="wikitable" style="width:100%;"\r\n| ==Meine Hobbies==\r\n|-\r\n| <hobbies />\r\n|}\r\n\r\n{| class="wikitable" style="width:100%;"\r\n| ==Meine Publikationen==\r\n|-\r\n| :<publications/>\r\n|}\r\n\r\n{| class="wikitable" style="width:100%;"\r\n| ==Meine Lesezeichen==\r\n|-\r\n| <bookmarks />\r\n|}
 cv.legend.admin.layouts    = Vorlagen
 cv.legend.admin.main       = Admin Panel
@@ -642,7 +640,6 @@ error.url.exists_not                         = Die angegebene URL existiert nich
 error.url.format                             = Die URL ist falsch formatiert. M\u00F6glicherweise fehlt das Protokoll.
 error.url.general                            = Etwas ist falsch an der URL.
 error.url_no_hash                            = Diese Seite existiert leider nicht auf unserem Server. Um auf eine Seite mit URL-Eintr\u00E4gen zuzugreifen, verwenden Sie bitte das URL-Schema /url/HASH.
-error.user                                   = 
 error.user.no_valid_username                 = Bitte geben Sie einen g\u00FCltigen Benutzernamen ein.
 error.user.none_existing_user                = Der Benutzer mit dem Namen {0} existiert nicht in unserem System.
 error.user.relation.update                   = Fehler beim Bearbeiten der Benutzer-Relation.
@@ -819,7 +816,6 @@ group.cv.members                                         = Mitglieder
 group.cv.publications                                    = Die neuesten Publikationen
 group.cv.title                                           = Lebenslauf der Gruppe {0}
 group.description.help                                   = eine kurze Beschreibung der Gruppe
-group.doesnotexist                                       = 
 group.doesnotexist.header                                = Gruppe existiert nicht
 group.groupRequest.description                           = Sie k\u00F6nnen hier eine neue Gruppe beantragen. Bitte geben Sie dazu den gew\u00FCnschten Namen der Gruppe ein und begr\u00FCnden Sie Ihren Antrag. Sie werden informiert, sobald die Gruppe durch einen Systembetreuer genehmigt wurde.
 group.groupRequest.reason                                = Begr\u00FCndung
@@ -941,7 +937,6 @@ less = weniger
 limited_account.activation.activate             = Aktivieren
 limited_account.activation.activitionConditions = Mir ist bekannt, dass ich nach der Aktivierung Publikationslisten \u00F6ffentlich schalten kann und diese von anderen Personen eingesehen werden k\u00F6nnen. Private Eintr\u00E4ge sind weiterhin m\u00F6glich und bleiben unsichtbar f\u00FCr andere Personen.
 limited_account.activation.error.checkbox       = Bitte aktivieren Sie die Kontrollbox um die nebenstehenden Bedingungen zu akzeptieren.
-limited_account.activation.naviActivate         = 
 limited_account.activation.text.left            = <h3 class="textPage"> Willkommen bei {0}!</h3>\n<div class="niceText">\n\u0009<p>\n\u0009\u0009{0} ist Ihr pers\u00F6nliches Publikationsmanagementsystem. Es erlaubt das zentrale anwendungs\u00FCbergreifende Speichern Ihrer Literaturlisten. Diese k\u00F6nnen in einer Vielzahl von Formaten f\u00FCr Publikationen, Lebensl\u00E4ufe und Homepages automatisch exportiert werden.\n\u0009</p>\n\u0009<p>\n\u0009\u0009Mit der Nutzung der Merkliste im Rechercheportal Ihrer Bibliothek erstellen Sie bereits Publikationseintr\u00E4ge in {0} und das ganz automatisch.\n\u0009</p>\n\u0009<p>\n\u0009\u0009Um nun die vollen Vorteile von {0} nutzen zu k\u00F6nnen, ben\u00F6tigen wir Ihre Zustimmung, die Sie mit dem untenstehenden Formular geben k\u00F6nnen. Entdecken Sie den kompletten Funktionsumfang, wie das Teilen von Literaturlisten mit Ihren Kollegen und Freunden. Oder exportieren Sie Ihre Literaturrecherche in einer riesigen Auswahl an Formaten. <br/>\n\u0009\u0009Nach dem Sie das Formular abgesendet haben, k\u00F6nnen Sie sofort alle Funktionen von {0} nutzen. \n\u0009</p>\n\u0009<p style="margin-bottom: 2em;">\n\u0009\u0009Wir w\u00FCnschen Ihnen viel Spa\u00DF und Erfolg!\n\u0009</p>\n</div>
 limited_account.activation.text.right           = <h4 class="textPage">Die PUMA Vorteile im \u00DCberblick:</h4>\n<div class="niceText">\n\u0009<ul class="text">\n\u0009\u0009<li>Online-Literaturverwaltung ohne Installation einer Software</li>\n\u0009\u0009<li>schnelles Bibliografieren per Mausklick oder ISBN-Eingabe</li>\n\u0009\u0009<li>einfaches Einbinden der Publikationsliste in die eigene Homepage</li>\n\u0009\u0009<li>Weiterleitung der Publikation an das institutionelle Repositorium, dadurch entf\u00E4llt eine erneute Erfassung</li>\n\u0009\u0009<li>Weiterleitung der Publikation an das Forschunginformationssystem (FIS) der Universit\u00E4t</li>\n\u0009\u0009<li>umfangreiche, intuitive Unterst\u00FCtzung bei der Erfassung von Publikationen</li>\n\u0009\u0009<li>Literaturlisten f\u00FCr die eigenen Publikationen erstellen</li>\n\u0009\u0009<li>einfache Erfassung, Verwaltung und Abruf von Web-Lesezeichen</li>\n\u0009\u0009<li>eLearning: Literaturlisten f\u00FCr Lehrveranstaltungen oder Arbeitsgruppen per Stichwort Nutzern zur Verf\u00FCgung stellen</li>\n\u0009</ul>\n</div>
 limited_account.activation.user_not_limited     = Ihr Zugang ist bereits aktiv.
@@ -1213,7 +1208,6 @@ oauth.denial.info                    = {0} darf nicht auf Ihren {1}-Account zugr
 oauth.denial.return                  = Zur\u00FCck zu {0}
 oauth.description                    = Hier sind alle OAuth-consumer aufgelistet, die eine Autorisierung auf Ihren {0} Account von Ihnen bekommen haben. Diese OAuth-consumer haben Zugriff auf alle Posts die Sie get\u00E4tigt haben.
 oauth.noToken                        = Ihr Account ist derzeit f\u00FCr keinen OAuth-Consumer freigegeben.
-oauth.table                          = 
 oauth.table.expirationTime           = Besteht bis
 oauth.table.issueTime                = Zugriff erlaubt am
 oauth.table.title                    = Anwendung
@@ -1434,7 +1428,6 @@ post.resource.editor                                    = Herausgeber
 post.resource.editor.help                               = Die Namen der Herausgeber im Format "Vorname Nachname" - ein Herausgeber pro Zeile. Nur notwendig, wenn kein Autor angegeben ist.
 post.resource.entrytype                                 = Eintragstyp
 post.resource.entrytype.article.description             = Ein Artikel aus einem wissenschaftlichen Journal
-post.resource.entrytype.book                            = 
 post.resource.entrytype.book.description                = Ein Buch das einen Herausgeber hat
 post.resource.entrytype.booklet.description             = Ein gedrucktes und gebundenes Werk bei dem kein Herausgeber oder eine finanzierede Institution vorgegeben ist
 post.resource.entrytype.conference                      = Konferenz*
@@ -1453,13 +1446,9 @@ post.resource.entrytype.patent.description              = Ein Patent
 post.resource.entrytype.periodical                      = periodical*
 post.resource.entrytype.periodical.description          = Eine regelm\u00E4\u00DFig erscheinende Publikation (z. B. eine Zeitung)
 post.resource.entrytype.phdthesis.description           = Eine Dissertationsschrift
-post.resource.entrytype.preamble                        = 
 post.resource.entrytype.preamble.description            = Eine Erkl\u00E4rung am Anfang eines Dokuments
-post.resource.entrytype.presentation                    = 
 post.resource.entrytype.presentation.description        = Ein Vortrag
-##post.resource.entrytype.proceedings                     = 
 post.resource.entrytype.proceedings.description         = Ein Tagungsband einer Konferenz
-post.resource.entrytype.standard                        = 
 post.resource.entrytype.standard.description            = Ein technischer Standard (z. B. ISO/IETF)
 post.resource.entrytype.techreport.description          = Eine Ver\u00F6ffentlichung einer Universit\u00E4t oder einer anderen Institution; typischerweise eine nummerierte Arbeit in einer Serie
 post.resource.entrytype.unpublished.description         = Eine Arbeit mit Autor und Titel, die jedoch nicht ver\u00F6ffentlicht wurde
