--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -562,6 +562,7 @@ error.friends_page_not_logged_in             = In order to access this page, you
 error.furtherInformations                    = For further information read the error-message: {0}
 error.general                                = An unknown error occured. Please try again later.\u0009
 error.general.login                          = You have to be logged in.
+error.group.secure.answer                    = Type in "yes" to delete this group.\r\n
 error.group_page_without_groupname           = Sorry, this page does not exist on our server. I your want to access a group page, please specify a group name like /group/GROUPNAME
 error.illegal_activation_code                = Sorry, your activation code "{0}" is invalid.
 error.import.failed                          = Import failed!
@@ -1895,7 +1896,7 @@ settings.group.memberList                                   = member list
 settings.group.memberList.empty                             = no users in group
 settings.group.memberList.help                              = set the privacy level of your member list
 settings.group.name                                         = name
-settings.group.noGroups                                     = You aren't a member of any group.
+settings.group.noGroups                                     = You are not a member of any group.
 settings.group.pendingInvites                               = group invites
 settings.group.pendingInvites.headline                      = You are invited to join the following groups
 settings.group.pendingRequests                              = pending requests
@@ -1920,7 +1921,7 @@ settings.group.reqGroup.automatic.button                    = create group
 settings.group.reqGroup.automatic.description               = Here you can create a new group. Please enter the desired name of the group and a short description. Your group will be created immediately.
 settings.group.reqGroup.automatic.reason                    = short description of the group
 settings.group.reqGroup.button                              = request group
-settings.group.reqGroup.description                         = Here you can request a new group. Please enter a name for the group and state the main purpose of that group. We will inform you as soon as a system administrator approved your group.
+settings.group.reqGroup.description                         = Here you can request a new group. Please enter the desired name of the group and justify your request. We will inform you as soon as a system administrator approved your group.
 settings.group.reqGroup.reason                              = reason for request
 settings.group.requestGroup.description                     = A new group can be created on the page <a href="{0}">{1}</a>.
 settings.group.requestGroup.link                            = request new group
@@ -2058,6 +2059,7 @@ subtags = subtags
 
 success = success
 
+success.groupDelete           = The group {0} has been deleted successfully.
 success.groupRequest.sent     = Your request to create the group {0} has been forwarded to the system's administrators.
 success.joinGroupRequest.sent = Your request to join the group {0} has been forwarded to the group's moderators.
 
