->small layout/text changes for screenshots

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1301,6 +1301,7 @@ person.show.firstReviewer              = First reviewer
 person.show.formFirstName              = First name
 person.show.formLastName               = Last name
 person.show.header                     = person entry
+person.show.modal.addrole.placeholder  = authorname or title
 person.show.modalAddNameHeader         = Add alternative name to person
 person.show.modalAddRoleHeader         = Add new role to thesis
 person.show.modalAddThesisHeader       = Add new thesis to person
@@ -1343,16 +1344,15 @@ personalized.tag.info = The following tags of {0} might be interesting for you:
 
 persons.intro.dataset.desc   = Authors in the {0} Folksonomy
 persons.intro.dataset.text   = TODO: translate: Die {0} Autoren Datenbank erweitert das Sammeln und Teilen von Publikationsmethadaten in der {0}-Folksonomie um die M\u00F6glicheit der kollektiven und kollaborativen Pflege von Autor-Publikationslisten. Durch die Erfassung von Publikationsdaten sind Autoren zun\u00E4chst nur \u00FCber namentliche Erw\u00E4hnung bekannt. Die {0} Autoren Datenbank erm\u00F6glicht es auf einfache Weise Peronen mit gleichem Namen zu unterscheiden, Autoren mit Pseduonymen und Namens\u00E4nderungen zusammenzufassen und zus\u00E4tzliche Informationen wie ORCID-Profile der Autoren zu einzutragen. wie z.B. zu erfassen.
-persons.intro.genealogy.desc = a database of doctoral advisors, supervisors and others 
+persons.intro.genealogy.desc = a database of authors, advisors, supervisors and others 
 persons.intro.genealogy.text = TODO: translate: Die Autoren-Datenbank der Autoren umfasst alle in der Deutschen Nationalbibliothek verzeichneten Deutschen Promotionsschriften. Das Ziel der {0} Datenbank ist eine m\u00F6glichst umfangreiche Erfassung aller Betreuungs- und Gutachter-Relationen zwischen Personen und Abschlussarbeiten. Dabei sind wir auf Ihre Hilfe angewiesen: Helfen Sie mit und erfassen Sie fehlende Promotionsschriften, Doktorv\u00E4ter, Doktorm\u00FCtter und andere Relationen!
-persons.intro.headline       = {0} Authors
-persons.intro.intro          = TODO: translate: Die Datenbank der {0} Autoren unterscheidet Autoren mit gleichem Namen in {0}. Sie enth\u00E4lt einen akademischer Stammbaum der Doktorv\u00E4ter und Doktorm\u00FCtter, aber auch der Gutachter, Betreuer, und sonstigen Beteiligten.
+persons.intro.head.desc      = TODO: translate: DEine Datenbank der Autoren, Doktorv\u00E4ter, Doktorm\u00FCtter und anderer
+persons.intro.head.title     = {0} Authors
 persons.intro.navi.dataset   = {0} Authors
 persons.intro.navi.genealogy = Academic Genealogy
 persons.intro.navi.search    = Search Author
 persons.intro.navi.wiskidz   = The Project
 persons.intro.search.desc    = TODO: translate: Finden Sie Autoren \u00FCber deren Namen oder \u00FCber Publikationstitel. Sie finden dann Informationen \u00FCber die Publikationen des Autors und k\u00F6nnen ausgehend von diesem Autor durch den akademischen Stammbaum navigieren.
-persons.intro.title          = {0} Persons
 persons.intro.wiskidz        = 
 persons.intro.wiskidz.desc   = TODO: translate: Das Forschungsprojekt zur Datenbank der {0} Autoren
 persons.intro.wiskidz.text   = The WISKIDZ project contributes to a better understanding of long-term developments in the recruiting behavior in public research and individual career paths after obtaining a doctoral degree. The analyses are based on dissertation data, which are supplemented by information on publications, patents and macro-economic data among others. The project essentially analyses two key issues. First, we aim to understand changes in recruiting behavior over time with a special focus put on disciplinary idiosyncrasies. We create and analyze genealogies of doctoral students and their advisors in selected fields (physics, electronics, management and medieval history) from 1945 to the present. Second, the project probes into the interdependencies of academic and non-academic employment opportunities of young researchers. The key points of interest are direct and indirect effects of exogenous changes in the labor market.
