--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1283,7 +1283,7 @@ passwordreminder.username.help = Ihr Benutzername
 
 person.index.header                    = Personensuche
 person.index.info                      = infotext
-person.index.placeholder               = Hier Personenname eingeben
+person.index.placeholder               = Autor \u00FCber Name und/oder Titel einer Publikation suchen
 person.new.formFirstName               = Vorname
 person.new.formInfo                    = Bei Unsicherheit \u00FCber den Namen, alles in das Nachname-Feld eintragen
 person.new.formLastName                = Nachname
@@ -1319,9 +1319,10 @@ person.show.firstReviewer              = Erstgutachter
 person.show.formFirstName              = Vorname
 person.show.formLastName               = Nachname
 person.show.header                     = Personeneintrag
+person.show.modal.addrole.placeholder  = Autorname oder Titel
 person.show.modalAddNameHeader         = Alternative Name zur Person hinzuf\u00FCgen
 person.show.modalAddRoleHeader         = Neue Rolle hinzuf\u00FCgen
-person.show.modalAddThesisHeader       = Neue Abschlussarbeit zur Person hinzuf\u00FCgen
+person.show.modalAddThesisHeader       = Neue Abschlussarbeit hinzuf\u00FCgen
 person.show.modalDeleteNameContent     = Wollen sie den gew\u00E4hlten Namen wirklich entfernen?
 person.show.modalDeleteNameHeader      = Namen zur Person entfernen
 person.show.modalDeleteRoleContent     = Wollen Sie die Personenzuordnung wirklich aufheben?
@@ -1360,16 +1361,15 @@ personalized.tag.info = Die folgenden Tags von {0} k\u00F6nnten Sie interessiere
 
 persons.intro.dataset.desc   = Autoren in der {0}-Folksonomie
 persons.intro.dataset.text   = Die {0} Autoren Datenbank erweitert das Sammeln und Teilen von Publikationsmethadaten in der {0}-Folksonomie um die M\u00F6glicheit der kollektiven und kollaborativen Pflege von Autor-Publikationslisten. Durch die Erfassung von Publikationsdaten sind Autoren zun\u00E4chst nur \u00FCber namentliche Erw\u00E4hnung bekannt. Die {0} Autoren Datenbank erm\u00F6glicht es auf einfache Weise Peronen mit gleichem Namen zu unterscheiden, Autoren mit Pseduonymen und Namens\u00E4nderungen zusammenzufassen und zus\u00E4tzliche Informationen wie ORCID-Profile der Autoren zu einzutragen. wie z.B. zu erfassen.
-persons.intro.genealogy.desc = Eine Datenbank der Doktorv\u00E4ter-, Doktorm\u00FCtter und anderer
+persons.intro.genealogy.desc = Eine Datenbank der Autoren, Doktorv\u00E4ter, Doktorm\u00FCtter und anderer
 persons.intro.genealogy.text = Die Autoren-Datenbank der Autoren umfasst alle in der Deutschen Nationalbibliothek verzeichneten Deutschen Promotionsschriften. Das Ziel der {0} Datenbank ist eine m\u00F6glichst umfangreiche Erfassung aller Betreuungs- und Gutachter-Relationen zwischen Personen und Abschlussarbeiten. Dabei sind wir auf Ihre Hilfe angewiesen: Helfen Sie mit und erfassen Sie fehlende Promotionsschriften, Doktorv\u00E4ter, Doktorm\u00FCtter und andere Relationen!
-persons.intro.headline       = {0} Autoren
-persons.intro.intro          = Die Datenbank der {0} Autoren unterscheidet Autoren mit gleichem Namen in {0}. Sie enth\u00E4lt einen akademischer Stammbaum der Doktorv\u00E4ter und Doktorm\u00FCtter, aber auch der Gutachter, Betreuer, und sonstigen Beteiligten.
+persons.intro.head.desc      = Eine Datenbank der Autoren, Doktorv\u00E4ter, Doktorm\u00FCtter und anderer
+persons.intro.head.title     = {0} Autoren
 persons.intro.navi.dataset   = {0} Autoren
 persons.intro.navi.genealogy = Akademischer Stammbaum
 persons.intro.navi.search    = Autorensuche
 persons.intro.navi.wiskidz   = Das Projekt
-persons.intro.search.desc    = Finden Sie Autoren \u00FCber deren Namen oder \u00FCber Publikationstitel und entdecken Sie ausgehend diesen den akademischen Stammbaum.
-persons.intro.title          = {0} Personen
+persons.intro.search.desc    = Finden Sie Autoren \u00FCber deren Namen oder \u00FCber Publikationstitel und entdecken Sie ausgehend von diesen den akademischen Stammbaum.
 persons.intro.wiskidz.desc   = Das Forschungsprojekt zur Datenbank der {0} Autoren
 persons.intro.wiskidz.text   = TODO: \u00FCbersetzen: The WISKIDZ project contributes to a better understanding of long-term developments in the recruiting behavior in public research and individual career paths after obtaining a doctoral degree. The analyses are based on dissertation data, which are supplemented by information on publications, patents and macro-economic data among others. The project essentially analyses two key issues. First, we aim to understand changes in recruiting behavior over time with a special focus put on disciplinary idiosyncrasies. We create and analyze genealogies of doctoral students and their advisors in selected fields (physics, electronics, management and medieval history) from 1945 to the present. Second, the project probes into the interdependencies of academic and non-academic employment opportunities of young researchers. The key points of interest are direct and indirect effects of exogenous changes in the labor market.
 
