fixed help links

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1109,7 +1109,7 @@ navi.groups.all                  = Alle Gruppen
 navi.groups.cap                  = Gruppen
 navi.groupsettings               = Einstellungen
 navi.help                        = Hilfe
-navi.helpUrl                     = /help_de
+navi.helpUrl                     = /help_de/
 navi.home                        = Home
 navi.imports                     = Importieren
 navi.inClipboard                 = Sie haben {0} Eintr\u00E4ge in Ihrer Ablage.
