--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1112,7 +1112,7 @@ navi.groups.all                  = \u0412\u0441\u0435 \u0433\u0440\u0443\u043F\u
 navi.groups.cap                  = \u0413\u0440\u0443\u043F\u043F\u044B
 navi.groupsettings               = \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
 navi.help                        = \u043F\u043E\u043C\u043E\u0449\u044C
-navi.helpUrl                     = /help_ru
+navi.helpUrl                     = /help_ru/
 navi.home                        = \u0414\u043E\u043C\u043E\u0439
 navi.imports                     = \u0438\u043C\u043F\u043E\u0440\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
 navi.inClipboard                 = \u0412 \u0432\u0430\u0448\u0435\u043C \u0431\u0443\u0444\u0435\u0440\u0435 {0} \u0437\u0430\u043F\u0438\u0441\u0435\u0439.
