--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1111,7 +1111,7 @@ navi.groups.all                  = all groups
 navi.groups.cap                  = Groups
 navi.groupsettings               = settings
 navi.help                        = help
-navi.helpUrl                     = /help_en
+navi.helpUrl                     = /help_en/
 navi.home                        = home
 navi.imports                     = imports
 navi.inClipboard                 = there are {0} posts on your clipboard
