'new thesis' button in the 'own thesis' tab is fixed.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -672,7 +672,7 @@ error.user_page_with_wrong_user_similarity   = Sorry, the user similarity is not
 error.user_page_without_username             = Sorry, this page does not exist on our server. If you want to access a user page, please specify a username like /user/USERNAME.
 error.viewable_page_not_logged_in            = In order to access this page, you need to be logged in so that we can check whether you are a member of the requested group. In order to see public posts of a given group, use, the URL scheme /group/GROUPNAME.
 error.viewable_page_without_group            = Sorry, this page does not exist on our server. If you want to access a viewable page, please specify a groupname like /viewable/GROUPNAME.
-
+error.add_new_thesis						 = You should add just one thesis. 
 example = example
 
 export = export
