'new thesis'  button in supervisor tab is fixed.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1696,6 +1696,13 @@ post.resource.volume.help                               = volume of a journal or
 post.resource.waitingForTags                            = fetching recommended tags
 post.resource.year                                      = year
 post.resource.year.help                                 = the year of publication, typically consisting of four numbers
+post.person.role										= publisher's role
+post.person.thesis_doctor_vater							= thesis's doctor vater
+post.person.thesis_first_reviewer						= thesis's first reviewer
+post.person.thesis_reviewer								= thesis's reviewer
+post.person.thesis_advisor								= thesis's advisor
+post.person.role.help									= please select the role of this person in this publication
+
 
 post_bibtex.button_label_check                       = check
 post_bibtex.button_label_post                        = post
