Added federated author and tag search

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1092,6 +1092,8 @@ navi.editTags.inactive           = Sign in to edit your tags.
 navi.editTagsAndConcepts         = edit your tags and concepts
 navi.export                      = export
 navi.federated                   = federated search
+navi.federatedAuthor             = federated search: author
+navi.federatedTag	             = federated search: tag
 navi.followees                   = followed users
 navi.followers                   = followers
 navi.friend                      = friend
