--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1090,6 +1090,8 @@ navi.editTags.inactive           = Melden Sie sich an, um Ihre Tags zu bearbeite
 navi.editTagsAndConcepts         = Tags und Konzepte bearbeiten
 navi.export                      = Export
 navi.federated                   = System\u00FCbergreifende Suche
+navi.federatedAuthor             = System\u00FCbergreifende Suche: Autor
+navi.federatedTag	             = System\u00FCbergreifende Suche: Tag
 navi.followees                   = verfolgte Benutzer
 navi.followers                   = Verfolger
 navi.friend                      = Freund
