Early check for already existing urls

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -636,7 +636,7 @@ error.upload.failed.size0                    = The uploaded file seems to have a
 error.upload.invalid.hash                    = The provided resource hash is invalid.
 error.url.emptyName                          = Missing URL-text.
 error.url.emptyUrl                           = Missing URL.
-error.url.exists                             = The given URL does already exist.
+error.url.exists                             = The URL has already been added.
 error.url.exists_not                         = The given URL does not exist.
 error.url.format                             = Wrong URL format. Missing protocol?
 error.url.general                            = Theres something wrong with the URL.
