--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -635,7 +635,7 @@ error.upload.failed.size0                    = Die empfangene Datei hat 0 Byte.
 error.upload.invalid.hash                    = Der Hash der Ressource ist ung\u00FCltig.
 error.url.emptyName                          = Fehlender URL-Name.
 error.url.emptyUrl                           = Fehlende URL.
-error.url.exists                             = Die angegebene URL existiert bereits.
+error.url.exists                             = Die angegebene URL wurde dem Eintrag bereits hinzugef\u00FCgt.
 error.url.exists_not                         = Die angegebene URL existiert nicht.
 error.url.format                             = Die URL ist falsch formatiert. M\u00F6glicherweise fehlt das Protokoll.
 error.url.general                            = Etwas ist falsch an der URL.
