added russian as option for the languate setting

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1829,14 +1829,14 @@ settings.editPublication.interFace.help                     = choose a default v
 settings.editPublication.interFace.help.advanced            = {0}: all options are displayed and available
 settings.editPublication.interFace.help.simple              = {0}: some "expert" options will be hidden
 settings.enabled                                            = enabled
-settings.english                                            = english
+settings.english                                            = English
 settings.female                                             = female
 settings.frequency                                          = frequency
 settings.friendOf                                           = I'm a friend of
 settings.friends                                            = friends
 settings.generalInformation                                 = general information
 settings.generateapikey                                     = (re)generate API key
-settings.german                                             = german
+settings.german                                             = German
 settings.group                                              = group
 settings.group.accInvite.button                             = accept
 settings.group.accInvite.button.title                       = accept the group invite
@@ -1962,6 +1962,7 @@ settings.really                                             = Are you sure?
 settings.really.help                                        = your account and all your posts will be deleted
 settings.resource.resourceToShow                            = displayed resources
 settings.resource.resourceToShow.help                       = Choose the resources to be displayed by default
+settings.russian                                            = Russian
 settings.saveChanges                                        = save changes
 settings.setlayout                                          = set layout
 settings.shareddocuments                                    = shared documents
