--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1959,6 +1959,7 @@ settings.really                                             = Sind Sie sicher?
 settings.really.help                                        = Ihr Konto und all Ihre Eintr\u00E4ge werden gel\u00F6scht
 settings.resource.resourceToShow                            = Angezeigte Ressourcen
 settings.resource.resourceToShow.help                       = W\u00E4hlen Sie, welche Ressourcen standardm\u00E4\u00DFig angezeigt werden sollen.
+settings.russian                                            = Russisch
 settings.saveChanges                                        = \u00C4nderungen speichern
 settings.setlayout                                          = Layout speichern
 settings.shareddocuments                                    = freigegebene Dokumente
