federated user search

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1094,6 +1094,7 @@ navi.export                      = export
 navi.federated                   = federated search
 navi.federatedAuthor             = federated search: author
 navi.federatedTag	             = federated search: tag
+navi.federatedUser	             = federated search: user
 navi.followees                   = followed users
 navi.followers                   = followers
 navi.friend                      = friend
