--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1092,6 +1092,7 @@ navi.export                      = Export
 navi.federated                   = System\u00FCbergreifende Suche
 navi.federatedAuthor             = System\u00FCbergreifende Suche: Autor
 navi.federatedTag	             = System\u00FCbergreifende Suche: Tag
+navi.federatedUser	             = System\u00FCbergreifende Suche: Benutzer
 navi.followees                   = verfolgte Benutzer
 navi.followers                   = Verfolger
 navi.friend                      = Freund
