--- a/bibsonomy-webapp/src/main/resources/messages_ru.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_ru.properties
@@ -1095,6 +1095,7 @@ navi.export                      = \u044D\u043A\u0441\u043F\u043E\u0440\u0442\u0
 navi.federated                   = \u041F\u043E\u0438\u0441\u043A \u043F\u043E \u043C\u043D\u043E\u0433\u0438\u043C \u0441\u0438\u0441\u0442\u0435\u043C\u0430\u043C
 navi.federatedAuthor             = System\u00FCbergreifende Suche: Autor
 navi.federatedTag	             = System\u00FCbergreifende Suche: Tag
+navi.federatedUser	             = System\u00FCbergreifende Suche: Benutzer
 navi.followees                   = \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438, \u043D\u0430 \u043A\u043E\u0442\u043E\u0440\u044B\u0445 \u0412\u044B \u043F\u043E\u0434\u043F\u0438\u0441\u0430\u043B\u0438\u0441\u044C
 navi.followers                   = \u0412\u0430\u0448\u0438 \u043F\u043E\u0434\u043F\u0438\u0441\u0447\u0438\u043A\u0438
 navi.friend                      = \u0434\u0440\u0443\u0433
